<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conways Game Of Life</string>
    <string name="action_settings">Settings</string>

    <!-- Menu Bar -->
    <string name="backButton_text">Back</string>
    <string name="statusButton_text">Play/Pause</string>
    <string name="menuButton_text">Menu</string>
    <string name="aboutButton_text">About</string>
    <string name="settingsButton_text">Settings</string>
    
    <!-- activity_main -->
    <string name="newGame_text">New Game</string>
    <string name="template_header_text">Templates</string>
    <string name="still_template_text">Still Lives</string>
    <string name="osc_template_text">Oscillation</string>
    <string name="glider_template_text">Gliders</string>
    <string name="exitGame_text">Exit Game</string>

    <!-- activity_new_game -->
    <string name="title_activity_new_game">New Game</string>
    
    <!--  activity_settings -->
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="setColor_text">Set Cell Color</string>
    <string name="blueColor_text">Blue</string>
    <string name="greenColor_text">Green</string>
    <string name="redColor_text">Red</string>
    <string name="yellowColor_text">Yellow</string>
    <string name="solidColor_text">Solid Color</string>
    <string name="changingColor_text">Changing Color</string>
    
    <string name="setCellSize_text">Set Cell Size</string>
    <string name="cellSizeSmall_text">Small</string>
    <string name="cellSizeMedium_text">Medium</string>
    <string name="cellSizeLarge_text">Large</string>
    
    <string name="cell_color_choice_text">Pick one of these four standard colors for the cells.</string>
    <string name="cell_size_choice_text">Pick one of these three cell sizes. The larger the size, the fewer that can fit on the screen.</string>
    <string name="generation_speed_choice_text">Pick one of these three generation animation speeds.</string>
    <string name="color_changing_options_text">Pick if each generation will change or remain the same color.</string>
    

</resources>
