<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/menuButton"
        android:showAsAction="ifRoom"
        android:title="@string/menuButton_text"
        android:icon="@drawable/ic_action_settings">

        <menu>
            
            <item 
                android:id="@+id/aboutButton"
        		android:showAsAction="ifRoom"
        		android:title="@string/aboutButton_text"/>
            
            <item 
                android:id="@+id/settingsButton"
        		android:showAsAction="ifRoom"
        		android:title="@string/settingsButton_text"/>
            
        </menu>
    </item>

</menu>
